--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/bigkizd/devtools/anaconda3/bin/python"
+    "python.pythonPath": "C:\\devtools\\envs\\bigkizd\\python.exe"
 }
