--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\devtools\\envs\\bigkizd\\python.exe"
+    "python.pythonPath": "/home/bigkizd/devtool/anaconda3/envs/sm/bin/python"
 }
